Fixed widget alignment in Firefox (#23)

--- a/src/main/resources/assets/styles/common.less
+++ b/src/main/resources/assets/styles/common.less
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: baseline;
-  align-content: flex-start;
+  align-content: center;
 }
 
 .card-border() {
